# ydict

./: .gitignore  CMakeLists.txt  CMakePresets.json  qqq  ydict.code-workspace
cfg/: ydict.cfg.example
cmake/: copy_if_missing.cmake
src/ydict/: main.cpp  ydict.cpp  ydict.h
